Em-6511 delete-enpoint pact test (#2566)